# fiche

./: Cargo.toml
src/: cli.rs  config.rs  context.rs  error.rs  main.rs  scrapper.rs
src/commands/: article.rs  issue.rs  mod.rs  tool.rs
src/llm/: groq.rs  mod.rs
src/vault/: mod.rs
