[package]
name = "fiche"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
html-to-markdown-rs = "3.8.3"
minijinja = "2.21.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tl = "0.7.8"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
